# consultasdeveiculos-sdk-python

./: .gitignore  APRESENTACAO.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic-usage.py  error-handling.py  explore-endpoints.py  sandbox-mode.py
scripts/: postinstall.py
spec/: Consultas - V2.10.2.83.postman_collection.json  manifest.json
src/consultasdeveiculos_sdk/: __init__.py
src/consultasdeveiculos_sdk/cache/: __init__.py
src/consultasdeveiculos_sdk/cli/: __init__.py  clear_cache_cmd.py  doctor_cmd.py  endpoints_cmd.py  update_cmd.py  version_cmd.py
src/consultasdeveiculos_sdk/core/: __init__.py  config_manager.py  endpoint_registry.py  postman_loader.py  sdk.py
src/consultasdeveiculos_sdk/errors/: __init__.py  sdk_error.py
src/consultasdeveiculos_sdk/parser/: __init__.py  folder_parser.py  postman_parser.py  request_parser.py
src/consultasdeveiculos_sdk/transport/: __init__.py  http_transport.py  sandbox_transport.py  transport.py
tests/: test_sdk.py
